--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -7,7 +7,7 @@
                 {{ if recording_url }}</a>{{ /if }}
 
                 {{ if show_sample && sample }}
-                <a class="button border center light sample" data-icon="play" href="{{ sample }}">Play</a>
+                <a class="button border center light sample" data-actionlink="true" data-icon="play" href="{{ sample }}">Play</a>
                 {{ /if }}
             </div>
         </div>
