--- a/_themes/tm3/partials/header.html
+++ b/_themes/tm3/partials/header.html
@@ -1,7 +1,7 @@
 <header>
     <nav role="navigation">
         <h1 class="title" id="logo">
-            <a href="/">Timothy M<small>c</small>Allister</a>
+            <a href="{{ homepage }}">Timothy M<small>c</small>Allister</a>
         </h1>
 
         <a href="#menu" id="menu-toggle"></a>
