--- a/_themes/tm3/css/map.css
+++ b/_themes/tm3/css/map.css
@@ -69,3 +69,115 @@
         top: 0;
     }
 }
+
+#year-selector-wrapper ol
+{
+    list-style: none;
+    margin: 30px;
+    overflow: hidden;
+    padding: 0;
+}
+
+#year-selector-wrapper li
+{
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    float: left;
+    margin: 2px;
+}
+
+#year-selector-wrapper a
+{
+    display: block;
+    padding: 30px;
+}
+
+#year-selector-wrapper a:hover
+{
+    background-color: #03a9f4;
+    color: #fff;
+}
+
+.js #year-selector-wrapper
+{
+    border: 1px solid #DBDBDB;
+    position: relative;
+    width: 100%;
+}
+
+.js #year-selector
+{
+    background-color: #fff;
+    border: 0;
+    border-radius: 0;
+    cursor: pointer;
+    font-size: 22px;
+    font-weight: 700;
+    padding: 8px 16px;
+    width: 100%;
+    -webkit-appearance: none;
+    -moz-appearance: window;
+    -o-appearance: none;
+    appearance: none;
+}
+
+.js #year-selector::-ms-expand
+{
+    display:none;
+}
+
+#year-selector-wrapper::before { content: ''; }
+
+.js #year-selector-wrapper::before
+{
+    background-color: #FFF;
+    bottom: 0;
+    content: "\e611";
+    font-size: 28px;
+    line-height: 44px;
+    pointer-events: none;
+    position: absolute;
+    right: 16px;
+    text-align: center;
+}
+
+@media (min-width: 768px)
+{
+    .js #year-selector-wrapper
+    {
+        position: absolute;
+        right: 16px;
+        top: 16px;
+        width: 125px;
+        z-index: 2;
+    }
+
+    .map #performance-list
+    {
+        bottom: 32px;
+        left: 16px;
+        margin: 0;
+        overflow: auto;
+        position: absolute;
+        right: 0;
+        top: 16px;
+        width: 320px;
+        z-index: 1;
+    }
+
+    .map #performance-list .h-event
+    {
+        cursor: pointer;
+        padding: 12px;
+        overflow: hidden;
+    }
+
+    .map #performance-list .h-event .button { display: none; }
+
+    .map #performance-list .h-event tr,
+    .map #performance-list .h-event .p-summary { display: none; }
+
+    .map #performance-list .h-event tr:first-child { display: table-row; }
+
+    .map #performance-list .h-event.active { background-color: #01579b; }
+    .map #performance-list .h-event.active * { color: #fff; }
+}
