Initial refactoring of Recordings JS

--- a/_themes/tm3/css/404.css
+++ b/_themes/tm3/css/404.css
@@ -32,6 +32,12 @@
         width: 50%;
     }
 
+    .hero .quotes
+    {
+        right: 24px;
+        width: auto;
+    }
+
     #content
     {
         float: right;
