--- a/_themes/tm3/css/map.css
+++ b/_themes/tm3/css/map.css
@@ -154,6 +154,7 @@
     .map #performance-list
     {
         bottom: 32px;
+        font-size: 14px;
         left: 16px;
         margin: 0;
         overflow: auto;
