--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -8,17 +8,13 @@
     <div class="row pad-horizontal">
         <div class="col-2-3">
             {{ entries:listing folder="recordings" limit="1" show_hidden="true" sort_by="datestamp" sort_dir="desc" }}
-            {{ theme:partial src="recording" show_details="true" show_sample="true" split_layout="true" use_context="true" }}
+            {{ theme:partial src="recording" show_details="true" show_learn_more="true" show_sample="true" split_layout="true" use_context="true" }}
             {{ /entries:listing }}
         </div>
         <div class="col-1-3 pad-half-vertical">
             <div class="pad card">
                 {{ entries:listing folder="news" limit="1" sort_by="datestamp" sort_dir="desc" }}
-                {{ theme:partial src="article" truncate="true" use_context="true" }}
-
-                <div class="text-center">
-                    <a class="button link" href="{{ url }}">Full Article</a>
-                </div>
+                {{ theme:partial src="article" use_context="true" }}
                 {{ /entries:listing }}
             </div>
         </div>
