--- a/_themes/tm3/css/quotes.css
+++ b/_themes/tm3/css/quotes.css
@@ -63,3 +63,11 @@
 
     .hero .quote { font-size: 14px; padding: 0; }
 }
+
+@media (min-width: 1024px)
+{
+    .hero .quote
+    {
+        font-size: 16px;
+    }
+}
