--- a/_themes/tm3/partials/typekit.html
+++ b/_themes/tm3/partials/typekit.html
@@ -1,3 +1,3 @@
 <!-- Typekit -->
-<script type="text/javascript" src="//use.typekit.net/vaq4obp.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+<script src="//use.typekit.net/iln2umr.js"></script>
+<script>try{Typekit.load();}catch(e){}</script>
