--- a/tm3/themes/ascent/scss/file.scss
+++ b/tm3/themes/ascent/scss/file.scss
@@ -58,10 +58,15 @@
 
   }
 
-  &.max-files-reached .drop-area {
-    .helper-text { display: none; }
-    .max-text { display: block; }
-    .choose-existing-file { display: none; }
+  &.single-file {
+	  .drop-area {
+		  width: 100%;
+	  }
+  }
+
+  &.max-files-reached {
+    padding-left: 0;
+    .drop-area { display: none; }
   }
 
   .choose-existing-file {
@@ -168,9 +173,13 @@
 //
 // GRID
 //
+.grid tbody tr td.cell-file {
+  padding: 0;
+}
 .cell-file .file-field-container {
   padding-left: 0;
   min-height: 0;
+  border: 0;
 
   .drop-area {
     position: relative;
