Changed the size of the menu to 100% for smaller screens.

--- a/_themes/tm3/css/menu.css
+++ b/_themes/tm3/css/menu.css
@@ -77,7 +77,12 @@ body.checked { overflow: hidden; }
 
 body.checked #menu-toggle::before { content: "\e610"; }
 
-body.checked #menu { width: 320px; }
+body.checked #menu { width: 100%; }
+
+@media (min-width: 415px)
+{
+    body.checked #menu { width: 320px; }
+}
 
 @media (min-width: 768px)
 {
